--- a/style.css
+++ b/style.css
@@ -81,3 +81,10 @@ footer {
     font-size: 0.6rem;
     margin-top: 0.5rem;
 }
+#container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 4rem;
+    gap: 3rem;
+}
